V5.3.5 Scatter Plot Highlight box alignment fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@ html {
   background: var(--bg);
   color: var(--txt);
   accent-color: var(--accent);
-  min-width: 800px;
+  min-width: 400px;
 }
 
 label.color-scheme {
